syntax = "proto3";
option java_multiple_files = true;
package mipt.highload.hw2.grpc;

message ChatMessage {
  string sender_username = 1;
  string receiver_name = 2;
  string message = 3;
}

message ChatMessageFromServer {
  ChatMessage message = 1;
}

service ChatService {
  rpc SendChatMessage (stream ChatMessage) returns (stream ChatMessageFromServer);
}